--- a/schedule.yml
+++ b/schedule.yml
@@ -1,1 +1,28 @@
+name: Run Telegram Bot
+
+on:
+  schedule:
+    - cron: '0 6 * * *'
+    - cron: '30 12 * * *'
+
+jobs:
+  run-bot:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests python-telegram-bot
+      - name: Run script
+        run: |
+          python bot.py
+        env:
+          BOT_TOKEN: ${{ secrets.1974949313:AAGAqJpXAz7CRueHjdRiObjZ_-3W23VY5do }}
+          CHAT_ID: ${{ secrets.1001861433470 }}
 
