--- a/schedule.yml
+++ b/schedule.yml
@@ -24,5 +24,5 @@ jobs:
           python bot.py
         env:
           BOT_TOKEN: ${{ secrets.1974949313:AAGAqJpXAz7CRueHjdRiObjZ_-3W23VY5do }}
-          CHAT_ID: ${{ secrets.1001861433470 }}
+          CHAT_ID: ${{ secrets.-1001861433470 }}
 
