--- a/schedule.yml
+++ b/schedule.yml
@@ -2,8 +2,9 @@ name: Run Telegram Bot
 
 on:
   schedule:
-    - cron: '0 6 * * *'
-    - cron: '30 12 * * *'
+    - cron: '0 1 * * *'  # 6:00 AM Tashkent time (1:00 AM UTC)
+    - cron: '0 7 * * *'  # 12:00 PM Tashkent time (7:00 AM UTC)
+
 
 jobs:
   run-bot:
