--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,32 +1,27 @@
-# This is a basic workflow that is manually triggered
+name: Run Telegram Bot
 
-name: Manual workflow
-
-# Controls when the action will run. Workflow runs when manually triggered using the UI
-# or API.
 on:
-  workflow_dispatch:
-    # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-        # The data type of the input
-        type: string
+  schedule:
+    - cron: '0 1 * * *'  # 6:00 AM Tashkent time (1:00 AM UTC)
+    - cron: '0 7 * * *'  # 12:00 PM Tashkent time (7:00 AM UTC)
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
-  greet:
-    # The type of runner that the job will run on
+  run-bot:
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Runs a single command using the runners shell
-    - name: Send greeting
-      run: echo "Hello ${{ inputs.name }}"
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests python-telegram-bot
+      - name: Run script
+        run: |
+          python3 bot.py
+        env:
+          BOT_TOKEN: ${{ secrets.1974949313:AAGAqJpXAz7CRueHjdRiObjZ_-3W23VY5do }}
+          CHAT_ID: ${{ secrets.1001861433470 }}
