--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         run: |
           python3 bot.py
         env:
-          BOT_TOKEN: ${{ secrets.1974949313:AAGAqJpXAz7CRueHjdRiObjZ_-3W23VY5do }}
-          CHAT_ID: ${{ secrets.1001861433470 }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          CHAT_ID: ${{ secrets.TELEGRAM_ID }}
