--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests python-telegram-bot
+          pip install -r requirements.txt  # Using requirements.txt to install dependencies
+
       - name: Run script
         run: |
           python3 bot.py
